# Kind

./: Cargo.toml
crates/kind-cli/: Cargo.toml
crates/kind-fmt/: Cargo.toml
crates/kind-fmt/src/: expr.rs  lib.rs  name.rs  parameter.rs  pattern.rs  primary.rs  statements.rs  top_level.rs
crates/kind-syntax/: Cargo.toml
crates/kind-syntax/src/: builders.rs  concrete.rs  lexemes.rs  lib.rs
