[package]
description = "A pure functional functional language that uses the HVM."
edition = "2021"
keywords = ["functional", "language", "type-theory", "proof-assistant"]
license = "MIT"
name = "kind-cli"
version = "0.1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kindc"
path = "src/main.rs"

[dependencies]
kind-syntax = {path = "../kind-syntax", version = "0.1.3"}
