[package]
edition = "2021"
name = "kind-fmt"
version = "0.1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thin-vec = "0.2.12"
ariadne = {version = "0.2.0", features = ["auto-color"]}
kind-syntax = {path = "../kind-syntax", version = "0.1.3"}
tree-sitter = "0.20.10"
tree-sitter-kind = "0.0.1"
